force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/tc9_edc__Setup_Pay_Code__mdt.object-meta.xml
<CustomObject>
    <description>Post Installation Pay Codes available for setup</description>
    <label>Setup Pay Code</label>
    <pluralLabel>Setup Pay Codes</pluralLabel>
</CustomObject>