force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Accrues_Leave__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Accrues_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accrues Leave</label>
    <type>Checkbox</type>
</CustomField>