force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__ATO_Other_Allowance_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__ATO_Other_Allowance_Description__c</fullName>
    <description>Narrative where ATO Allowance Type = Other</description>
    <inlineHelpText>Narrative where ATO Allowance Type = Other</inlineHelpText>
    <label>ATO Other Allowance Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>