force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__AU_Payroll_Tax_Reportable__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__AU_Payroll_Tax_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AU Payroll Tax Reportable</label>
    <type>Checkbox</type>
</CustomField>