force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Contributes_to_OTE__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Contributes_to_OTE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contributes to OTE</label>
    <type>Checkbox</type>
</CustomField>