force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Description__c</fullName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>