force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Excess_SGC_Refund__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Excess_SGC_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess SGC Refund</label>
    <type>Checkbox</type>
</CustomField>