force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__External_ID_Data_Creation__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__External_ID_Data_Creation__c</fullName>
    <label>External ID - Data Creation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>