force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__GST_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__GST_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Exempt?</label>
    <type>Checkbox</type>
</CustomField>