force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Include_in_Payroll_Accrual__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Include_in_Payroll_Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Payroll Accrual</label>
    <type>Checkbox</type>
</CustomField>