force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>