force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Invoice_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Invoice_Rate_Multiplier__c</fullName>
    <label>Invoice Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>