force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Lump_Sum_A_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Lump_Sum_A_Type__c</fullName>
    <label>Lump Sum A Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>