force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Pay_Advice_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Pay_Advice_Sort_Order__c</fullName>
    <label>Pay Advice Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>