force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__Pay_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Pay_Code_Name__c</fullName>
    <label>Pay Code Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>