force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__STP_Allowance_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__STP_Allowance_Other_Description__c</fullName>
    <label>STP Allowance Other Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>