force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__STP_Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__STP_Deduction_Type__c</fullName>
    <label>STP Deduction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>