force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/fields/tc9_edc__WorkCover_Reportable__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__WorkCover_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the pay code will be considered during 2cloudnine Payroll Oncost Distribution (general ledger)</description>
    <inlineHelpText>Determines if the pay code will be considered during 2cloudnine Payroll Oncost Distribution (general ledger)</inlineHelpText>
    <label>WorkCover Reportable?</label>
    <type>Checkbox</type>
</CustomField>