force-app/main/default/objects/tc9_edc__Setup_Pay_Code__mdt/listViews/tc9_edc__By_Record_Type.listView-meta.xml
<ListView>
    <fullName>tc9_edc__By_Record_Type</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>tc9_edc__Description__c</columns>
    <columns>tc9_edc__Invoice_Name__c</columns>
    <columns>tc9_edc__Pay_Rate_Multiplier__c</columns>
    <columns>tc9_edc__Invoice_Rate_Multiplier__c</columns>
    <columns>tc9_edc__STP_Payment_Type__c</columns>
    <columns>tc9_edc__Record_Type_Developer_Name__c</columns>
    <columns>tc9_edc__External_ID_Data_Creation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_edc__Record_Type_Developer_Name__c</field>
        <operation>contains</operation>
        <value>ETP</value>
    </filters>
    <label>By Record Type</label>
</ListView>